syntax = "proto3";

package mails;

message MailRequest {   
  string to = 1;
  string subject = 2;
  string text = 3;
  
}

message MailResponse {
  bool success = 1;
  string error = 2;

}

service MailService {
  rpc sendMail(MailRequest) returns (MailRequest);

}